--- a/_generated/index.html
+++ b/_generated/index.html
@@ -87,7 +87,7 @@
 				  		</div>
 				  		<div data-aos="fade-down" data-aos-delay="400" class="header__links">
 				  			<div class="header__langswitcher">
-				  				<a href="en" class="langswich-item switch-lang ">eng</a><span class="langswich-item separator">/</span><a href="ru" class="langswich-item active-lang active">rus</a>
+				  				<a href="en" class="langswich-item switch-lang">eng / <span class="active">rus</span></a>
 				  			</div>
 				  		</div>
 				  	</div>
