--- a/_generated/index.html
+++ b/_generated/index.html
@@ -83,7 +83,7 @@
 				  		</a></div>
 				  		<div data-aos="fade-down" data-aos-delay="200" class="header__spacer">
 				  			<a href="#forms-block" class="spacer__text">хочу шедевр</a>
-				  			<a target="_blank" href="/remote/direct_uploads/1554889165_knowhow-price.pdf" class="spacer__text">хочу прайс</a>
+				  			<a target="_blank" href="/remote/direct_uploads/1555083624_price-list-ru.pdf" class="spacer__text">хочу прайс</a>
 				  		</div>
 				  		<div data-aos="fade-down" data-aos-delay="400" class="header__links">
 				  			<div class="header__langswitcher">
@@ -200,6 +200,7 @@
 		  </div>
 		  <div class="banner__mob-content wrapper banner__toform-btn">
 		    <div class="toform-btn__btn"><a href="#forms-block">хочу шедевр</a></div>
+		    <div class="toform-btn__btn"><a target="_blank" href="/remote/direct_uploads/1555083624_price-list-ru.pdf">хочу прайс</a></div>
 		     
 		    <p class="banner__mob-text">КОГДА-ТО ДАВНО МИКЕЛАНДЖЕЛО ВООРУЖИЛСЯ ИНСТРУМЕНТАМИ<br/>И СОЗДАЛ ИЗ ГЛЫБЫ МРАМОРА ПРОИЗВЕДЕНИЕ ИСКУССТВА — «ДАВИДА».<br/> СКУЛЬПТОР ДАЖЕ ПРЕНЕБРЕГ ЛОГИКОЙ И ИСКАЗИЛ ПРОПОРЦИИ ЧЕЛОВЕЧЕСКОГО ТЕЛА,<br/> ЧТОБЫ ДОСТИЧЬ БОЛЬШЕЙ ХУДОЖЕСТВЕННОЙ ВЫРАЗИТЕЛЬНОСТИ.</p>
 		  </div>
