--- a/_generated/index.html
+++ b/_generated/index.html
@@ -41,7 +41,7 @@
 		<section class="banner">
 		
 		
-		  <div class="banner__popup">
+		  <!-- <div class="banner__popup">
 		    <button class="close-btn"><img src="assets/img/close-button.svg"></button>
 		    <div class="popup__container">
 		      <video id="popup-video" preload="auto" autoplay="true" muted="muted" playsInline>
@@ -49,7 +49,7 @@
 		      </video>
 		      <video id="popup-video-mob" src="../assets/img/popup-mob.mp4" autoplay="true" muted="muted" playsInline></video>
 		    </div>
-		  </div>
+		  </div> -->
 		  <div class="banner__grid">
 				  <header class="header">
 				  
